<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ylm_ros2</name>
  <version>2.0.0</version>
  <description>The lumotive_ros 2 driver designed to interface with Lumotive sensors</description>
  <maintainer email="support@lumotive.com">Lumotive</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
